Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-129846

Quit in GUI application on linux in qt 6.8.0 does not quit and process runs indefinitely

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.8.1, 6.9.0 FF
    • 6.8.0
    • Core: Event loop, D-Bus
    • None
    • Built on alpine linux x86_64 using static qt and libraries, running on arch linux x86_64
    • Linux/X11
    • 4fabde349 (dev), 334a3922c (6.8), 65093a84c (dev), dce6ef8fa (6.8), 1da7558bf (dev), 6dc19b55f (6.9), 5acbda4b0 (6.8)

      Have a GUI application which was working fine in previous versions of Qt (6.5.3), upon closing the window with the X in the corner or clicking a quit button that calls close() on QMainWindow, using a static Qt 6.8.0 build the application does not actually exit, I have to ctrl + c the terminal in where I ran it:

        8356 pts/1    S+     0:00 ./AuTerm
      If i run the same executable in gdb then it seems to exit normally.

       

      Attaching gdb to the process after having clicked quit gives:

      __cp_end () at src/thread/x86_64/syscall_cp.s:29

      warning: 29     src/thread/x86_64/syscall_cp.s: No such file or directory
      (gdb) bt
      #0  __cp_end () at src/thread/x86_64/syscall_cp.s:29
      #1  0x0000000001ba9dc5 in __syscall_cp_c (nr=202, u=<optimized out>, v=<optimized out>, w=<optimized out>, x=<optimized out>,  
         y=<optimized out>, z=0) at src/thread/pthread_cancel.c:33
      #2  0x0000000001bb45f5 in __futex4_cp (to=0x0, val=2, op=128, addr=0x7ffca8379fb4) at src/thread/__timedwait.c:24
      #3  __timedwait_cp (addr=addr@entry=0x7ffca8379fb4, val=val@entry=2, clk=clk@entry=1, at=at@entry=0x0, priv=128, priv@entry=1)
         at src/thread/__timedwait.c:52
      #4  0x0000000001baa1cf in __pthread_cond_timedwait (c=0x7f02d2280eb8, m=0x7f02d2280e90, ts=0x0)
         at src/thread/pthread_cond_timedwait.c:100
      #5  0x000000000184a6cb in QWaitCondition::wait(QMutex*, QDeadlineTimer) ()
      #6  0x000000000183c819 in QThread::wait(QDeadlineTimer) ()
      #7  0x00000000015b975d in QDBusConnectionManager::~QDBusConnectionManager() ()
      #8  0x00000000015b924e in QtGlobalStatic::Holder<(anonymous namespace)::Q_QGS__q_manager>::~Holder() ()
      #9  0x0000000001b97ede in __funcs_on_exit () at src/exit/atexit.c:34
      #10 0x0000000000469212 in exit (code=0) at src/exit/exit.c:29
      #11 0x0000000001b97a8b in libc_start_main_stage2 (main=0x469300 <main>, argc=1, argv=0x7ffca837a1a8)
         at src/env/__libc_start_main.c:95
      #12 0x0000000000474fbb in _start ()

        1. 6_5.tar.gz
          20.98 MB
        2. 6_8_and_source.tar.gz
          16.62 MB
        For Gerrit Dashboard: QTBUG-129846
        # Subject Branch Project Status CR V

            thiago Thiago Macieira
            thedjnk Mr nK
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: